<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/image">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:context=".MainActivity">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/team_a"
                android:textColor="@color/white"
                android:fontFamily="serif"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAllCaps="true" />
            <TextView
                android:id="@+id/team_a_run"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="48sp"
                android:gravity="center_horizontal" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_a"
                android:onClick="addOneForTeamA"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="24dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two_a"
                android:onClick="addTwoForTeamA"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three_a"
                android:onClick="addThreeForTeamA"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/four_a"
                android:onClick="addFourForTeamA"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/six_a"
                android:onClick="addSixForTeamA"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context=".MainActivity">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/team_b"
                android:textColor="@color/white"
                android:fontFamily="serif"
                android:textStyle="bold"

                android:textSize="20sp"
                android:textAllCaps="true" />
            <TextView
                android:id="@+id/team_b_run"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="0"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="48sp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_b"
                android:onClick="addOneForTeamB"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="24dp" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two_b"
                android:onClick="addTwoForTeamB"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three_b"
                android:onClick="addThreeForTeamB"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/four_b"
                android:onClick="addFourForTeamB"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/six_b"
                android:onClick="addSixForTeamB"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:onClick="resetRun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/reset"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp" />
</RelativeLayout>